[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/menu/BackArrow.png" type="Texture" id=1]
[ext_resource path="res://assets/menu/GUIFrameBlue.png" type="Texture" id=2]
[ext_resource path="res://scripts/menu/OptionsMenu.gd" type="Script" id=3]

[node name="OptionsMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = -500.0
margin_right = -150.0
margin_bottom = -750.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 100.0
margin_right = 724.0
margin_bottom = 350.0
custom_constants/separation = 15

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 724.0
margin_bottom = 70.0

[node name="Sound" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 272.0
margin_right = 452.0
margin_bottom = 70.0
texture_normal = ExtResource( 2 )

[node name="SoundLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/Sound"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Sound On"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 724.0
margin_bottom = 155.0

[node name="Restore" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 272.0
margin_right = 452.0
margin_bottom = 70.0
texture_normal = ExtResource( 2 )

[node name="RestoreLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer2/Restore"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Restore Purchase"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 724.0
margin_bottom = 236.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 72.0
margin_bottom = 66.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 72.0
margin_bottom = 66.0
icon = ExtResource( 1 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/Sound" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer2/Restore" to="." method="_on_Restore_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/BackButton" to="." method="_on_BackButton_pressed"]
